--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
   "manifest_version": 2,
   "name": "Genshin CodeEnter",
-  "version": "1.0.1",
+  "version": "1.1.1",
   "description": "__MSG_extensionDescription__",
   "default_locale": "en",
   "icons": {
-    "48": "icon.png"
+    "256": "icon.png"
   },
   "permissions": [
     "activeTab",
@@ -15,11 +15,15 @@
   ],
   "browser_action": {
     "default_icon": "icon.png",
-    "default_title": "__MSG_extensionDescription__",
-    "default_popup": "popup.html"
+    "default_title": "__MSG_extensionDescription__"
   },
   "options_ui": {
     "page": "options.html",
     "open_in_tab": false
+  },
+  "background": {
+    "scripts": [
+      "background.js"
+    ]
   }
 }
